# PassQuantum

./: .gitattributes  .gitignore  Build-FaceBundle.ps1  LICENSE  README.md  app-security.pqmeta  build-mac-native.sh  build.sh  extension.crx  extension.pem  face_debug_cli.py  go.mod  go.sum  index.html  main.py  private.key  public.key
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  deploy-landing.yml
ZimPass (PassQuantum_C)/: CMakeLists.txt  README.md  vcpkg.json
ZimPass (PassQuantum_C)/.github/workflows/: build.yml
ZimPass (PassQuantum_C)/docs/: DEPENDENCIES_WINDOWS.md  PORTING_PLAN.md
ZimPass (PassQuantum_C)/include/zimpass/: application.hpp  biometric_service.hpp  camera_backend.hpp  crypto_engine.hpp  gui_app.hpp  palette_extractor.hpp  password_strength.hpp  types.hpp  vault_repository.hpp
ZimPass (PassQuantum_C)/src/app/: application.cpp
ZimPass (PassQuantum_C)/src/biometric/: camera_backend.cpp  face_engine.cpp
ZimPass (PassQuantum_C)/src/security/: crypto_engine.cpp
ZimPass (PassQuantum_C)/src/ui/: gui_app.cpp  main.cpp
ZimPass (PassQuantum_C)/src/utils/: palette_extractor.cpp  password_strength.cpp
ZimPass (PassQuantum_C)/src/vault/: vault_repository.cpp
app/: README.md  access.go  helpers.go  helpers_test.go  import.go  state.go
assets/: index-DMDC-eUW.js  index-K5V0oSNR.css
bridge/: README.md  face_guard.go  face_guard_apps.go  face_guard_procattr_linux.go  face_guard_procattr_other.go
cmd/: README.md
cmd/test-vault/: main.go
core/: README.md
core/crypto/: README.md  aes.go  app_security.go  kyber.go  vault.go  vault_pq.go
core/filevault/: README.md  crypto.go  crypto_test.go  manifest.go  store.go  tempfiles.go
core/migration/: README.md  csv_common.go  detect.go  importer.go  mapper.go  mapper_test.go  model.go  normalize.go  normalize_test.go  parser_1password.go  parser_bitwarden.go  parser_chromium.go  parser_dashlane.go  parser_firefox.go  parser_generic.go  parser_kaspersky.go  parser_keepass.go  parser_lastpass.go  parser_nordpass.go  parser_protonpass.go  parsers_phase2_test.go  parsers_test.go  zip_common.go
core/migration/testdata/: bitwarden.csv  bitwarden.json  chromium.csv  firefox.csv  (+5 more)
core/model/: README.md  vault_entry.go
core/storage/: README.md  security_metadata.go  vault_format.go  vault_migration_test.go
core/totp/: README.md  migration.go  qr.go  totp.go  totp_test.go
design_handoff_passquantum_redesign/: PassQuantum.html  README.md  app.jsx  components.jsx  screens.jsx  tokens.css
docs/: ARCHITECTURE.md  GO_APP_SPECIFICATION.md  README.md  SECURITY_ARCHITECTURE.md  USER_EXPERIENCE.md  USER_GUIDE.md
extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
internal/: README.md
internal/browser/: README.md  config.go  domain.go  domain_map.go  domain_test.go  handlers.go  pairing.go  pairing_test.go  server.go  server_test.go  vault_service.go  vault_service_impl.go
internal/storage/: README.md  dpapi_stub.go  dpapi_windows.go  permissions.go  storage.go
landing page/: README.md  index.html  package-lock.json  package.json  vite.config.js
landing page/src/: App.jsx  LangContext.jsx  config.js  index.css  translations.js
legacy/: README.md  auth_server.py  build-native.sh  main.go.backup
models/: README.md  README.txt
new-passquantum/: ARCHITECTURE.md  Build-FaceBundle.ps1  DELIVERY_CHECKLIST.md  DEVELOPMENT.md  GO_APP_SPECIFICATION.md  IMPLEMENTATION_GUIDE.md  Makefile  README.md  SECURITY_ARCHITECTURE.md  USER_EXPERIENCE.md  USER_GUIDE.md  app-security.pqmeta  build-native.sh  build-windows-native-biometric.ps1  build.sh  face_guard.py  go.mod  go.sum  liveness_detector.py  private.key  public.key  requirements.txt  vault.pqdb
new-passquantum/.tmp_model_src/: camera_probe.go  model_introspect.go  model_smoketest.go
new-passquantum/LEGACY_md_files/: BUILD_GUIDE.md  COMPILATION_GUIDE.md  COMPLETION_CHECKLIST.md  COMPLETION_STATUS.md  FINAL_REPORT.md  QUICK_BUILD_GUIDE.md  QUICK_REFERENCE.md  QUICK_START_ENHANCED_UI.md  README_SECURE_STORAGE.md  README_UI_COMPONENTS.md  REFACTORING_SUMMARY.md  SECURE_STORAGE_REFACTORING.md  SECURITY_ARCHITECTURE.md  SETTINGS_DESIGN.md  UI_COMPONENT_API.md  UI_ENHANCEMENT_SUMMARY.md  UI_IMPLEMENTATION_REPORT.md  UI_REFACTORING_SUMMARY.md  UI_VISUAL_GUIDE.md  WINDOWS_OPENGL_FIX.md
new-passquantum/models/: face_mesh.onnx
new-passquantum/palette/: color_utils.go  extractor.go  roles.go  theme.go
new-passquantum/strength/: analyzer.go  easter_egg.go  entropy.go  patterns.go  result.go  similarity.go  wordlists.go
new-passquantum/ui/: access_control.go  app.manifest  app_dialogs.go  biometric_camera_gocv.go  biometric_control.go  biometric_control_stub.go  biometric_preview_gocv.go  biometric_preview_stub.go  camera_open.go  color_picker.go  face_guard.go  face_guard_apps.go  helpers.go  login_screen.go  main.go  main_screen.go  nativefile.go  password_checker.go  passwords_view.go  private.key  public.key  python_bundle.go  python_bundle_windows.go  settings_screen.go  strength_widgets.go  theme_picker.go  training_screen.go  ui_enhancements.go  ui_theme.go  ui_theme_test.go  vault_selection.go
new-passquantum/vaults/: 2.pqdb  asdas.pqdb
palette/: README.md  roles.go
python/: README.md  face_authenticator.py  face_guard.py  geometric_encoder.py  liveness_detector.py
strength/: README.md  easter_egg.go
theme/: README.md  components.go  enhancements.go  fonts.go  icons.go  quantum_theme.go  theme.go  theme_test.go
ui/: README.md  main.go  maximize_darwin.go  maximize_linux.go  maximize_windows.go  python_bundle.go  python_bundle_darwin.go  python_bundle_windows.go
ui/assets/: assets.go
ui/screens/: README.md  app_icon.go  color_picker.go  filevault.go  generator_panel.go  import_wizard.go  login.go  main_screen.go  main_screen_additem.go  main_screen_items.go  main_screen_tools.go  pairing_dialog.go  passwords.go  settings.go  strength_widgets.go  theme_picker.go  totp.go  training.go  vault_selection.go
ui/widgets/: README.md  dialogs.go  nativefile.go
vaults/: Default.pqdb
(+46 files in other folders)
